--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ on: [pull_request]
 
 jobs:
   build_and_test:
+    env:
+      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
     runs-on: ubuntu-latest
     container: openjdk:11.0.1-jdk-slim-stretch
     name: Build and test
@@ -10,3 +12,9 @@ jobs:
       uses: actions/checkout@v1
     - name: Test
       run: ./gradlew test
+    - name: Jacoco reports
+      run: ./gradlew testCoverage
+    - name: Upload test results to Codacy
+      run: |
+        bash <(curl -Ls https://coverage.codacy.com/get.sh)
+        ./codacy-coverage-reporter report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
