--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,4 @@ jobs:
     - name: Jacoco reports
       run: ./gradlew testCoverage
     - name: Upload test results to Codacy
-      run: |
-        bash <(curl -Ls https://coverage.codacy.com/get.sh)
-        ./codacy-coverage-reporter report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+      run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
