--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,9 @@ jobs:
       run: ./gradlew test
     - name: Jacoco reports
       run: ./gradlew testCoverage
+
     - name: Upload test results to Codacy
       run: |
-        sudo apt-get update && sudo apt-get install -y curl jq
+        apt-get update && apt-get install -y curl jq
         curl -LS -o codacy-coverage-reporter-assembly.jar "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')"
         java -jar codacy-coverage-reporter-assembly.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
