--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -21,5 +21,5 @@ jobs:
         run: |
           apt-get update && apt-get install -y curl jq
           curl -LS -o codacy-coverage-reporter-assembly.jar "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')"
-          java -jar codacy-coverage-reporter-assembly.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml --commit-uuid $GITHUB_SHA
+          java -jar codacy-coverage-reporter-assembly.jar report -l Kotlin -r build/reports/jacoco/test/jacocoTestReport.xml --commit-uuid $GITHUB_SHA
 
