--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -5,21 +5,20 @@ on:
 
 jobs:
   build_and_test:
-    env:
-      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
     runs-on: ubuntu-latest
     container: openjdk:11.0.1-jdk-slim-stretch
     name: Build and test
+    env:
+      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: Test
         run: ./gradlew test
-      - name: Jacoco reports
-        run: ./gradlew testCoverage
-      - name: Upload test results to Codacy
-        run: |
-          apt-get update && apt-get install -y curl jq
-          curl -LS -o codacy-coverage-reporter-assembly.jar "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')"
-          java -jar codacy-coverage-reporter-assembly.jar report -l Kotlin -r build/reports/jacoco/test/jacocoTestReport.xml --commit-uuid $GITHUB_SHA
-
+      - name: Publish test coverage
+        uses: paambaati/codeclimate-action@v2.2.4
+        env:
+          CC_TEST_REPORTER_ID: $CC_TEST_REPORTER_ID
+        with:
+          coverageCommand: ./gradlew testCoverage
+          coverageLocations: [ "build/reports/jacoco/test/jacocoTestReport.xml" ]
+    
