--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -20,5 +20,5 @@ jobs:
           CC_TEST_REPORTER_ID: $CC_TEST_REPORTER_ID
         with:
           coverageCommand: ./gradlew testCoverage
-          coverageLocations: [ "build/reports/jacoco/test/jacocoTestReport.xml" ]
+          coverageLocations: "build/reports/jacoco/test/jacocoTestReport.xml" 
     
