--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -12,13 +12,16 @@ jobs:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
     steps:
       - uses: actions/checkout@v1
+      - name: Setup Code Climate tool
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter 
+      - name: Before tests
+        run: ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
-        uses: paambaati/codeclimate-action@v2.4.0
-        env:
-          CC_TEST_REPORTER_ID: $CC_TEST_REPORTER_ID
-        with:
-          coverageCommand: ./gradlew testCoverage
-          coverageLocations: "build/reports/jacoco/test/jacocoTestReport.xml" 
-    
+        run: | 
+          ./gradlew testCoverage
+          JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
+          ./cc-test-reporter upload-coverage
