--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
-          apt-get update && apt-get install -y curl
+          apt-get update && apt-get install -y curl git
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
       - name: Before tests
