--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Publish test coverage
         run: | 
           ./gradlew testCoverage
+          ./cc-test-reporter after-build --exit-code $?
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
