--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build and test
     env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      GIT_BRANCH: ${{ github.head_ref }}
     steps:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
@@ -19,8 +20,6 @@ jobs:
           chmod +x ./cc-test-reporter 
       - name: Before tests
         run: ./cc-test-reporter before-build
-        env:
-          GIT_BRANCH: $(git rev-parse --abbrev-ref HEAD)
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
@@ -28,5 +27,3 @@ jobs:
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
-        env:
-          GIT_BRANCH: $(git rev-parse --abbrev-ref HEAD)
