--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -10,11 +10,11 @@ jobs:
     name: Build and test
     env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-      GIT_BRANCH: ${{ env.GITHUB_REF }}
     steps:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
+          export GIT_BRANCH=$(git rev-parse --short "$GITHUB_SHA")
           apt-get update && apt-get install -y curl git
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
@@ -24,6 +24,7 @@ jobs:
         run: ./gradlew test
       - name: Publish test coverage
         run: | 
+          export GIT_BRANCH=$(git rev-parse --short "$GITHUB_SHA")
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
