--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -19,7 +19,9 @@ jobs:
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
       - name: Before tests
-        run: ./cc-test-reporter before-build
+        run: |
+          export GIT_BRANCH=$(git rev-parse --short "$GITHUB_SHA")
+          ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
