--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -14,21 +14,19 @@ jobs:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
-          export GIT_BRANCH=${{ github.ref }}
-          echo "Git branch: "
-          echo $GIT_BRANCH
+          export GIT_BRANCH=master
           apt-get update && apt-get install -y curl git
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
       - name: Before tests
         run: |
-          export GIT_BRANCH=${{ github.ref }}
+          export GIT_BRANCH=master
           ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
         run: | 
-          export GIT_BRANCH=${{ github.ref }}
+          export GIT_BRANCH=master
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
