--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
-          export GIT_BRANCH=${GITHUB_REF:11}
+          export GIT_BRANCH="${GITHUB_REF:11}"
           echo "Git branch:"
           echo $GIT_BRANCH
           apt-get update && apt-get install -y curl git
@@ -22,13 +22,13 @@ jobs:
           chmod +x ./cc-test-reporter 
       - name: Before tests
         run: |
-          export GIT_BRANCH=${GITHUB_REF:11}
+          export GIT_BRANCH="${GITHUB_REF:11}"
           ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
         run: | 
-          export GIT_BRANCH=${GITHUB_REF:11}
+          export GIT_BRANCH="${GITHUB_REF:11}"
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
