--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
-          export GIT_BRANCH=${{ github.ref }}
+          export GIT_BRANCH=${GITHUB_REF:10}
           echo "Git branch:"
           echo $GIT_BRANCH
           apt-get update && apt-get install -y curl git
