--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -12,9 +12,11 @@ jobs:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
     steps:
       - name: Set Git branch for Code Climate
-        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:11}
+        run: echo ::set-env name=GIT_BRANCH::$GITHUB_REF
       - name: Setup Code Climate tool
         run: |
+          echo "Git branch"
+          echo $GIT_BRANCH
           apt-get update && apt-get install -y curl git
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
