--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -14,22 +14,18 @@ jobs:
     steps:
       - name: Set Git branch for Code Climate
         run: echo ::set-env name=GIT_BRANCH::$(echo $GITHUB_REF | cut -c12-)
+      - uses: actions/checkout@v1
       - name: Setup Code Climate tool
         run: |
-          echo "Git branch"
-          echo $GIT_BRANCH
           apt-get update && apt-get install -y curl git
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter 
       - name: Before tests
-        run: |
-          export GIT_BRANCH=${{ github.ref }}
-          ./cc-test-reporter before-build
+        run: ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
       - name: Publish test coverage
         run: | 
-          export GIT_BRANCH=${{ github.ref }}
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
