Continue test coverage run on error

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -33,6 +33,7 @@ jobs:
         run: ./cc-test-reporter before-build
       - name: Test
         run: ./gradlew test
+        continue-on-error: true
       - name: Archive test artifacts
         uses: actions/upload-artifact@v1
         with:
