--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -32,15 +32,19 @@ jobs:
       - name: Before tests
         run: ./cc-test-reporter before-build
       - name: Test
+        id: test
         run: ./gradlew test
-        continue-on-error: true
       - name: Archive test artifacts
+        if: always()
         uses: actions/upload-artifact@v1
         with:
           name: testng
           path: build/reports/tests/test
       - name: Publish test coverage
-        run: | 
+        if: always()
+        run: |
           ./gradlew testCoverage
           JACOCO_SOURCE_PATH=src/main/kotlin ./cc-test-reporter format-coverage -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
           ./cc-test-reporter upload-coverage
+
+
