--- a/.github/workflows/docker-volume.yml
+++ b/.github/workflows/docker-volume.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         mkdir foo
         echo "bar" > foo/bar.txt
-        docker run --volume $PWD/foo:/foo ubuntu cat /foo/bar.txt
+        docker run --volume $PWD/foo:/foo ubuntu ls /foo
     - name: Archive workspace
       if: always()
       uses: actions/upload-artifact@v1
