--- a/.github/workflows/docker-volume.yml
+++ b/.github/workflows/docker-volume.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         mkdir foo
         echo "bar" > foo/bar.txt
-        docker run --volume $PWD/foo:/app/foo ubuntu /bin/bash -c "echo foo contains && ls -la /app"
+        docker run --volume $PWD/foo:/app/foo ubuntu /bin/bash -c "echo foo contains && ls -la /app/foo"
     - name: Archive workspace
       if: always()
       uses: actions/upload-artifact@v1
