--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Dump GitHub context vars
         run: | 
-          echo "github: "
+          echo "github event sha: ${{ github.event.pull_request.head.sha }}"
           echo ${{ toJson(github) }}
       # Reference: https://help.github.com/en/actions/automating-your-workflow-with-github-actions/contexts-and-expression-syntax-for-github-actions#github-context
       - name: Set Git branch for Code Climate
