--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,8 @@
 plugins:
   sonar-java:
     enabled: true
+    config:
+      sonar.issuesReport.html.enable: true
+
+exclude_patterns:
+  - "build/"
